[gd_scene load_steps=19 format=3 uid="uid://dp1yifrxgmp5w"]

[ext_resource type="Script" path="res://trovadorismo cena/trovadorismopt2.gd" id="1_k2tp0"]
[ext_resource type="Texture2D" uid="uid://dejwxyctsbbl2" path="res://assets/trovadorismo assets/ecbb8a7a8093fb9.png" id="2_5dbtg"]
[ext_resource type="PackedScene" path="res://trovadorismo cena/score.tscn" id="3_5xya6"]
[ext_resource type="FontFile" uid="uid://cwbpxp1bhq1tc" path="res://assets/fonts/04B_03__.TTF" id="4_vbnlb"]
[ext_resource type="Script" path="res://trovadorismo cena/Placar.gd" id="5_ay34c"]
[ext_resource type="Texture2D" uid="uid://bq3qpq50h3gux" path="res://assets/trovadorismo assets/Legacy-Fantasy - High Forest 2.3/HUD/Base-01.png" id="6_st2u5"]
[ext_resource type="Texture2D" uid="uid://dc0syu1m2whb6" path="res://assets/trovadorismo assets/Lively_NPCs_v3.0/sprite sheets/medieval/minstrel.png" id="7_ypxdc"]
[ext_resource type="Texture2D" uid="uid://cyl7j6g4wx7so" path="res://assets/trovadorismo assets/perguntas assets/heart pixel art 32x32.png" id="8_cuddo"]
[ext_resource type="Texture2D" uid="uid://ckkn0e0uwtbb3" path="res://assets/trovadorismo assets/perguntas assets/pixel-art-paw-prints-rug-graphics-transparent-png-1110298.png" id="9_n0q6w"]
[ext_resource type="Texture2D" uid="uid://bhh0vyvelhxij" path="res://assets/trovadorismo assets/perguntas assets/kisspng-sprite-space-station-13-clown-pixel-art-clown-5ad20a501bf318.3621064715237146401145.png" id="10_6v1b8"]
[ext_resource type="Texture2D" uid="uid://b4lierip5ycx4" path="res://assets/trovadorismo assets/perguntas assets/pngwing.com.png" id="11_kawfm"]
[ext_resource type="Script" path="res://trovadorismo cena/UI.gd" id="12_suv0b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mk7wu"]
atlas = ExtResource("7_ypxdc")
region = Rect2(0, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iilt"]
atlas = ExtResource("7_ypxdc")
region = Rect2(34, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rpob"]
atlas = ExtResource("7_ypxdc")
region = Rect2(68, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_uy46s"]
atlas = ExtResource("7_ypxdc")
region = Rect2(102, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jdfu"]
atlas = ExtResource("7_ypxdc")
region = Rect2(136, 0, 34, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_wyjka"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk7wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iilt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rpob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uy46s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jdfu")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="trovadorismopt3" type="Node2D"]
script = ExtResource("1_k2tp0")

[node name="BG" type="Node2D" parent="."]

[node name="Ecbb8a7a8093Fb9" type="Sprite2D" parent="BG"]
z_index = -3
position = Vector2(288, 512.5)
scale = Vector2(0.697115, 0.874359)
texture = ExtResource("2_5dbtg")
metadata/_edit_group_ = true

[node name="Score" parent="." instance=ExtResource("3_5xya6")]
script = null

[node name="Placar" type="Label" parent="Score"]
z_index = 1
offset_left = 9.0
offset_top = 7.0
offset_right = 393.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vbnlb")
theme_override_font_sizes/font_size = 25
text = "Pontos: 0"
script = ExtResource("5_ay34c")

[node name="Base-01" type="Sprite2D" parent="Score"]
position = Vector2(93.5, 20.5)
scale = Vector2(2.89063, 2.3125)
texture = ExtResource("6_st2u5")
region_enabled = true
region_rect = Rect2(0, 64, 64, 16)

[node name="UI" type="Node2D" parent="."]

[node name="Pergunta" type="Label" parent="UI"]
z_index = 1
offset_left = 56.0
offset_top = 86.0
offset_right = 546.0
offset_bottom = 273.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vbnlb")
theme_override_font_sizes/font_size = 24
text = "Qual o tipo de cantiga recitada pelo 
cavaleiro trovador?"
metadata/_edit_group_ = true

[node name="Base-01" type="Sprite2D" parent="UI"]
position = Vector2(285.5, 113.5)
scale = Vector2(7.51562, 4.5625)
texture = ExtResource("6_st2u5")
region_enabled = true
region_rect = Rect2(0, 64, 64, 16)

[node name="Base-02" type="Sprite2D" parent="UI"]
position = Vector2(173.25, 204.75)
scale = Vector2(3.74219, 1.44531)
texture = ExtResource("6_st2u5")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="Resposta" type="Label" parent="UI"]
offset_left = 69.0
offset_top = 170.0
offset_right = 366.0
offset_bottom = 391.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vbnlb")
theme_override_font_sizes/font_size = 15
text = "Resposta correta: 
Cantiga de Amor!
"

[node name="próxima fase2" type="Button" parent="UI"]
z_index = 1
offset_left = 176.0
offset_top = 428.0
offset_right = 376.0
offset_bottom = 528.0
focus_mode = 0
keep_pressed_outside = true
flat = true

[node name="Base-01" type="Sprite2D" parent="UI/próxima fase2"]
position = Vector2(93, 74)
scale = Vector2(7.5, 3.0875)
texture = ExtResource("6_st2u5")
region_enabled = true
region_rect = Rect2(0, 176, 16, 16)

[node name="Label" type="Label" parent="UI/próxima fase2"]
layout_mode = 0
offset_left = 25.0
offset_top = 26.0
offset_right = 178.0
offset_bottom = 61.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vbnlb")
theme_override_font_sizes/font_size = 15
text = "Próxima Fase!"
metadata/_edit_group_ = true

[node name="Base-02" type="Sprite2D" parent="UI/próxima fase2"]
z_index = -1
position = Vector2(93, 40)
scale = Vector2(2.37891, -2.34375)
texture = ExtResource("6_st2u5")
region_enabled = true
region_rect = Rect2(0, 64, 64, 16)
metadata/_edit_group_ = true

[node name="Botões" type="Node2D" parent="."]

[node name="Amor" type="Button" parent="Botões"]
offset_left = 68.0
offset_top = 583.0
offset_right = 275.0
offset_bottom = 646.0
focus_mode = 0
flat = true
metadata/_edit_group_ = true

[node name="Base-01" type="Sprite2D" parent="Botões/Amor"]
position = Vector2(13.5625, 27.875)
scale = Vector2(3.05469, -3.01562)
texture = ExtResource("6_st2u5")
region_enabled = true
region_rect = Rect2(64, 64, 16, 16)
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Botões/Amor"]
layout_mode = 0
offset_left = 41.0
offset_top = 17.0
offset_right = 194.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vbnlb")
theme_override_font_sizes/font_size = 15
text = "Cantiga de Amor"
metadata/_edit_group_ = true

[node name="Base-02" type="Sprite2D" parent="Botões/Amor"]
z_index = -1
position = Vector2(119, 29)
scale = Vector2(2.63281, -2.8125)
texture = ExtResource("6_st2u5")
region_enabled = true
region_rect = Rect2(0, 64, 64, 16)
metadata/_edit_group_ = true

[node name="maldizer" type="Button" parent="Botões"]
offset_left = 326.0
offset_top = 770.0
offset_right = 533.0
offset_bottom = 833.0
focus_mode = 0
flat = true
metadata/_edit_group_ = true

[node name="Base-01" type="Sprite2D" parent="Botões/maldizer"]
position = Vector2(13.5625, 27.875)
scale = Vector2(3.05469, -3.01562)
texture = ExtResource("6_st2u5")
region_enabled = true
region_rect = Rect2(64, 64, 16, 16)

[node name="Label" type="Label" parent="Botões/maldizer"]
layout_mode = 0
offset_left = 41.0
offset_top = 17.0
offset_right = 194.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vbnlb")
theme_override_font_sizes/font_size = 15
text = "Cantiga de Maldizer"

[node name="Base-02" type="Sprite2D" parent="Botões/maldizer"]
z_index = -1
position = Vector2(119, 29)
scale = Vector2(2.63281, -2.8125)
texture = ExtResource("6_st2u5")
region_enabled = true
region_rect = Rect2(0, 64, 64, 16)

[node name="Escarnio" type="Button" parent="Botões"]
offset_left = 65.0
offset_top = 770.0
offset_right = 267.0
offset_bottom = 833.0
focus_mode = 0
flat = true
metadata/_edit_group_ = true

[node name="Base-01" type="Sprite2D" parent="Botões/Escarnio"]
position = Vector2(13.5625, 27.875)
scale = Vector2(3.05469, -3.01562)
texture = ExtResource("6_st2u5")
region_enabled = true
region_rect = Rect2(64, 64, 16, 16)

[node name="Label" type="Label" parent="Botões/Escarnio"]
layout_mode = 0
offset_left = 41.0
offset_top = 17.0
offset_right = 226.0
offset_bottom = 49.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vbnlb")
theme_override_font_sizes/font_size = 15
text = "Cantiga de Escárnio"

[node name="Base-02" type="Sprite2D" parent="Botões/Escarnio"]
z_index = -1
position = Vector2(119, 29)
scale = Vector2(2.63281, -2.8125)
texture = ExtResource("6_st2u5")
region_enabled = true
region_rect = Rect2(0, 64, 64, 16)

[node name="Amigo" type="Button" parent="Botões"]
offset_left = 323.562
offset_top = 583.0
offset_right = 530.563
offset_bottom = 646.0
focus_mode = 0
flat = true

[node name="Base-01" type="Sprite2D" parent="Botões/Amigo"]
position = Vector2(13.5625, 27.875)
scale = Vector2(3.05469, -3.01562)
texture = ExtResource("6_st2u5")
region_enabled = true
region_rect = Rect2(64, 64, 16, 16)

[node name="Label" type="Label" parent="Botões/Amigo"]
layout_mode = 0
offset_left = 41.0
offset_top = 17.0
offset_right = 194.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vbnlb")
theme_override_font_sizes/font_size = 15
text = "Cantiga de Amigo"

[node name="Base-02" type="Sprite2D" parent="Botões/Amigo"]
z_index = -1
position = Vector2(119, 29)
scale = Vector2(2.63281, -2.8125)
texture = ExtResource("6_st2u5")
region_enabled = true
region_rect = Rect2(0, 64, 64, 16)

[node name="Assets" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Assets"]
position = Vector2(445, 220)
scale = Vector2(5.85294, 6.23529)
sprite_frames = SubResource("SpriteFrames_wyjka")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.0826097

[node name="HeartPixelArt32x32" type="Sprite2D" parent="."]
position = Vector2(80, 612)
texture = ExtResource("8_cuddo")

[node name="Pixel-art-paw-prints-rug-graphics-transparent-png-1110298" type="Sprite2D" parent="."]
position = Vector2(336.563, 612)
scale = Vector2(0.0519231, 0.0662544)
texture = ExtResource("9_n0q6w")

[node name="Kisspng-sprite-space-station-13-clown-pixel-art-clown-5Ad20a501Bf318_3621064715237146401145" type="Sprite2D" parent="."]
position = Vector2(88, 803)
scale = Vector2(0.104492, 0.0742188)
texture = ExtResource("10_6v1b8")

[node name="Pngwing_com" type="Sprite2D" parent="."]
position = Vector2(339, 797)
scale = Vector2(0.0557367, 0.0511734)
texture = ExtResource("11_kawfm")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 261.0
offset_top = -26.0
offset_right = 391.0
offset_bottom = 3.00002
grow_horizontal = 0
scale = Vector2(2.39993, 0.833445)
size_flags_horizontal = 4
script = ExtResource("12_suv0b")

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.005
offset_left = -35.0
offset_top = 36.0
offset_right = 1.35001
offset_bottom = 86.0
grow_horizontal = 0
scale = Vector2(0.973056, 0.819522)

[node name="Button" type="Button" parent="Menu/MarginContainer"]
layout_mode = 2
focus_mode = 0
flat = true
alignment = 0

[node name="Sprite2D" type="Sprite2D" parent="Menu"]
z_index = 1
position = Vector2(123.383, 56.7084)
scale = Vector2(1.09951, 2.9601)
texture = ExtResource("6_st2u5")
region_enabled = true
region_rect = Rect2(0, 240, 16, 16)

[connection signal="pressed" from="UI/próxima fase2" to="." method="_on_próxima_fase_2_pressed" flags=18]
[connection signal="pressed" from="Botões/Amor" to="." method="_on_amor_pressed" flags=18]
[connection signal="pressed" from="Botões/maldizer" to="." method="_on_maldizer_pressed" flags=18]
[connection signal="pressed" from="Botões/Escarnio" to="." method="_on_escarnio_pressed" flags=18]
[connection signal="pressed" from="Botões/Amigo" to="." method="_on_amigo_pressed" flags=18]
[connection signal="pressed" from="Menu/MarginContainer/Button" to="Menu" method="_on_button_pressed" flags=18]
